--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url(fontawesome-all.min.css);
 /* @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700"); */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700i,800i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700i,800i&display=swap');
 
 /*
 	Editorial by HTML5 UP
@@ -3035,7 +3035,7 @@ input, select, textarea {
 			flex-shrink: 1;
 			margin: 0 0 6em 6em;
 			position: relative;
-			width: calc(33.33333% - 6em);
+			width: calc(50% - 6em);
 		}
 
 			.posts article:before {
@@ -3059,6 +3059,8 @@ input, select, textarea {
 				right: 0;
 				width: calc(100% + 6em);
 			}
+
+		
 
 			.posts article > :last-child {
 				margin-bottom: 0;
@@ -3190,6 +3192,235 @@ input, select, textarea {
 							display: none;
 						}
 
+		}
+
+
+/* Education Posts */
+
+	.education-posts {
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+		margin: 0 0 2em -6em;
+		width: calc(100% + 6em);
+	}
+
+	
+
+		.education-posts article {
+			-moz-flex-grow: 0;
+			-webkit-flex-grow: 0;
+			-ms-flex-grow: 0;
+			flex-grow: 0;
+			-moz-flex-shrink: 1;
+			-webkit-flex-shrink: 1;
+			-ms-flex-shrink: 1;
+			flex-shrink: 1;
+			margin: 0 0 0em 6em;
+			position: relative;
+			width: calc(50% - 6em);
+	
+		}
+
+	
+
+			.education-posts article:before {
+				/* background: rgba(210, 215, 217, 0.75); */
+				content: '';
+				display: block;
+				height: calc(100% + 6em);
+				left: -3em;
+				position: absolute;
+				top: 0;
+				width: 1px;
+			}
+
+			.education-posts article:after {
+				/* background: rgba(210, 215, 217, 0.75); */
+				bottom: -3em;
+				content: '';
+				display: block;
+				height: 1px;
+				position: absolute;
+				right: 0;
+				width: calc(100% + 6em);
+			}
+
+
+
+			.date {
+				color: pink;
+				float: right;
+			}
+
+			.education-bullet {
+				width: 100%;
+				margin: 0em 0em 0em 6em;
+			}
+		
+
+			.education-posts article > :last-child {
+				margin-bottom: 0;
+			}
+
+			.education-posts article .image {
+				display: block;
+				margin: 0 0 2em 0;
+			}
+
+				.education-posts article .image img {
+					display: block;
+					width: 100%;
+				}
+
+				.education-posts article > h3 {
+					margin: 3em 0.2em 0.2em 0;
+				}
+
+		
+
+				/* .education-bullet {
+					margin: 0em 0em 0.2em 0;
+				} */
+
+		@media screen and (min-width: 1681px) {
+
+			.education-posts article:nth-child(3n + 1):before {
+				display: none;
+			}
+
+			.education-posts article:nth-child(3n + 1):after {
+				width: 100%;
+			}
+
+			.education-posts article:nth-last-child(1), .education-posts article:nth-last-child(2), .education-posts article:nth-last-child(3) {
+				margin-bottom: 0;
+			}
+
+				.education-posts article:nth-last-child(1):before, .education-posts article:nth-last-child(2):before, .education-posts article:nth-last-child(3):before {
+					height: 100%;
+				}
+
+				.education-posts article:nth-last-child(1):after, .education-posts article:nth-last-child(2):after, .education-posts article:nth-last-child(3):after {
+					display: none;
+				}
+
+		}
+
+		@media screen and (max-width: 1680px) {
+
+			.education-posts article {
+				width: calc(50% - 6em);
+			}
+
+				.education-posts article:nth-last-child(3) {
+					margin-bottom: 6em;
+				}
+
+		}
+
+		@media screen and (min-width: 481px) and (max-width: 1680px) {
+
+			.education-posts article:nth-child(2n + 1):before {
+				display: none;
+			}
+
+			.education-posts article:nth-child(2n + 1):after {
+				width: 100%;
+			}
+
+			.education-posts article:nth-last-child(1), .education-posts article:nth-last-child(2) {
+				margin-bottom: 0;
+			}
+
+				.education-posts article:nth-last-child(1):before, .education-posts article:nth-last-child(2):before {
+					height: 100%;
+				}
+
+				.education-posts article:nth-last-child(1):after, .education-posts article:nth-last-child(2):after {
+					display: none;
+				}
+
+		}
+
+		@media screen and (max-width: 736px) {
+
+			.education-posts {
+				margin: 0 0 2em -4.5em;
+				width: calc(100% + 4.5em);
+			}
+
+				.education-posts article {
+					margin: 0 0 4.5em 4.5em;
+					width: calc(50% - 4.5em);
+				}
+
+					.education-posts article:before {
+						height: calc(100% + 4.5em);
+						left: -2.25em;
+					}
+
+					.education-posts article:after {
+						bottom: -2.25em;
+						width: calc(100% + 4.5em);
+					}
+
+					.education-posts article:nth-last-child(3) {
+						margin-bottom: 4.5em;
+					}
+
+		}
+
+		@media screen and (max-width: 480px) {
+
+			.education-posts {
+				margin: 0 0 2em 0;
+				width: 100%;
+			}
+
+				.education-posts article {
+					margin: 0 0 4.5em 0;
+					width: 100%;
+				}
+
+					.education-posts article:before {
+						display: none;
+					}
+
+					.education-posts article:after {
+						width: 100%;
+					}
+
+					.education-posts article:last-child {
+						margin-bottom: 0;
+					}
+
+						.education-posts article:last-child:after {
+							display: none;
+						}
+
+		}
+
+/* Experience */
+		.experience-posts > article {
+		
+		}
+
+		.heading {
+			display: flex;
+			justify-content: space-between;
+		}
+		.title-company {
+			display: flex;
+		}
+
+		.company {
+			color: #7f888f;
 		}
 
 /* Wrapper */
@@ -3811,6 +4042,11 @@ input, select, textarea {
 			margin-top: 0;
 			padding-top: 0;
 		}
+
+		#education.posts {
+			border: none;
+		}
+
 
 
 	
