--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,6 +168,8 @@ input, select, textarea {
 		a:hover {
 			border-bottom-color: rgb(245, 227, 231);
 			color: rgb(245, 227, 231) !important;
+			/* border-bottom-color: #93A39B;
+			color: #93A39B; */
 		}
 
 			a:hover strong {
@@ -1859,7 +1861,7 @@ input, select, textarea {
 		border-bottom: solid 3px rgb(245, 227, 231);
 		display: inline-block;
 		margin: 0 0 2em 0;
-		padding: 0 0.75em 0.5em 0;
+		padding: 0 0.75em 0em 0;
 	}
 
 	header.main > :last-child {
@@ -2191,12 +2193,14 @@ input, select, textarea {
 	}
 	.skill-icon {
 		color: #93A39B;
+		/* background-image: linear-gradient( 69.9deg,  rgba(76,79,106,1) 3.2%, rgba(118,124,163,1) 97.6% );
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent; */
 		/* -webkit-background-clip: image; */
 		/* background-image: linear-gradient( 109.6deg,  rgba(240,228,122,1) 11.2%, rgba(253,145,212,1) 54.5%, rgba(176,222,234,1) 99.6% );		 */
-		/* -webkit-background-clip: text;
-		background-image: linear-gradient( 69.9deg,  rgba(76,79,106,1) 3.2%, rgba(118,124,163,1) 97.6% );
-		background-image: radial-gradient( circle 666px at 0.4% 48%,  rgba(202,204,227,1) 0%, rgba(89,89,99,1) 97.5% );
-		background-image: linear-gradient( 109.6deg,  rgba(205,139,81,1) 32.7%, rgba(234,178,118,1) 77.5% ); */
+
+		/* background-image: radial-gradient( circle 666px at 0.4% 48%,  rgba(202,204,227,1) 0%, rgba(89,89,99,1) 97.5% ); */
+		/* background-image: linear-gradient( 109.6deg,  rgba(205,139,81,1) 32.7%, rgba(234,178,118,1) 77.5% ); */
 
 /* background-image: radial-gradient( circle 582px at 48.3% 136.8%,  rgba(200,159,159,1) 56.9%, rgba(134,133,171,1) 100.2% ); */
 /* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(255,168,114,1) 0%, rgba(254,106,164,1) 100.2% ); */
@@ -2206,7 +2210,7 @@ input, select, textarea {
 /* background-image: linear-gradient( 179.7deg,  rgba(248,126,126,1) -0.5%, rgba(251,206,143,1) 35.3%, rgba(184,252,233,1) 67.2%, rgba(118,162,229,1) 92.3% ); */
 /* background-image: linear-gradient( 107.5deg,  rgba(208,222,170,1) 11.7%, rgba(191,226,224,1) 70.5% ); */
 
-/* -webkit-text-fill-color: transparent; */
+
 		font-size: 4em;
 		display: flex;
 		flex-direction: column;
@@ -2304,6 +2308,8 @@ input, select, textarea {
 			-ms-transform: scale(1.075);
 			transform: scale(1.075);
 		}
+
+
 
 /* List */
 
@@ -3254,7 +3260,7 @@ input, select, textarea {
 
 
 			.date {
-				color: pink;
+				color:#93A39B;;
 				float: right;
 			}
 
@@ -3547,6 +3553,7 @@ input, select, textarea {
 		}
 
 	#sidebar {
+	
 		-moz-flex-grow: 0;
 		-webkit-flex-grow: 0;
 		-ms-flex-grow: 0;
@@ -3563,16 +3570,26 @@ input, select, textarea {
 		font-size: 0.9em;
 		position: relative;
 		width: 26em;
-	}
+		background-color: #93A39B;
+		/* background-color: rgb(245, 227, 231); */
+
+		/* background-image: linear-gradient( 69.9deg,  rgba(76,79,106,1) 3.2%, rgba(118,124,163,1) 97.6% ); */
+	}	
 
 		#sidebar h2 {
 			font-size: 1.38889em;
+			color: white;
 		}
 
 		#sidebar > .inner {
 			padding: 2.22222em 2.22222em 2.44444em 2.22222em ;
+			
 			position: relative;
 			width: 26em;
+			height: 100vh;
+			display: flex;
+			align-items: center;
+			
 		}
 
 			#sidebar > .inner > * {
@@ -3619,6 +3636,7 @@ input, select, textarea {
 			top: 0;
 			width: 6em;
 			z-index: 10000;
+			width: 100%;
 		}
 
 			#sidebar .toggle:before {
@@ -3632,6 +3650,7 @@ input, select, textarea {
 				text-transform: none !important;
 				font-family: 'Font Awesome 5 Free';
 				font-weight: 900;
+				width: 100%;
 			}
 
 			#sidebar .toggle:before {
@@ -3735,10 +3754,18 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
+			#sidebar .inactive .toggle {
+				/* width: 100%; */
+			}
+
 			#sidebar .toggle {
 				text-indent: 7.25em;
 				width: 7.25em;
+				/* width: 100%; */
+				/* display: flex; */
+	
 			}
+		
 
 				#sidebar .toggle:before {
 					color: #7f888f;
@@ -3746,6 +3773,8 @@ input, select, textarea {
 					margin-top: -0.25em;
 					font-size: 1.1rem;
 					z-index: 1;
+					width: 100%;
+					float: left;
 				}
 
 				#sidebar .toggle:after {
@@ -3938,6 +3967,10 @@ input, select, textarea {
 
 /* Menu */
 
+#menu {
+	width: 100%;
+}
+
 	#menu ul {
 		-moz-user-select: none;
 		-webkit-user-select: none;
@@ -3951,6 +3984,10 @@ input, select, textarea {
 		margin-bottom: 0;
 		padding: 0;
 		text-transform: uppercase;
+		text-align: right;
+		width: 100%;
+		/* height: 100%; */
+
 	}
 
 		#menu ul a, #menu ul span {
@@ -4047,6 +4084,12 @@ input, select, textarea {
 			border: none;
 		}
 
+
+#coco {
+			width: 16%; 
+			border-radius: 100%;
+			margin: 0 auto;
+}
 
 
 	
