--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,6 +168,8 @@ input, select, textarea {
 		a:hover {
 			border-bottom-color: rgb(245, 227, 231);
 			color: rgb(245, 227, 231) !important;
+				/* color:#93A39B !important; */
+			/* background-color: #93A39B; */
 			/* border-bottom-color: #93A39B;
 			color: #93A39B; */
 		}
@@ -2196,21 +2198,6 @@ input, select, textarea {
 		/* background-image: linear-gradient( 69.9deg,  rgba(76,79,106,1) 3.2%, rgba(118,124,163,1) 97.6% );
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent; */
-		/* -webkit-background-clip: image; */
-		/* background-image: linear-gradient( 109.6deg,  rgba(240,228,122,1) 11.2%, rgba(253,145,212,1) 54.5%, rgba(176,222,234,1) 99.6% );		 */
-
-		/* background-image: radial-gradient( circle 666px at 0.4% 48%,  rgba(202,204,227,1) 0%, rgba(89,89,99,1) 97.5% ); */
-		/* background-image: linear-gradient( 109.6deg,  rgba(205,139,81,1) 32.7%, rgba(234,178,118,1) 77.5% ); */
-
-/* background-image: radial-gradient( circle 582px at 48.3% 136.8%,  rgba(200,159,159,1) 56.9%, rgba(134,133,171,1) 100.2% ); */
-/* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(255,168,114,1) 0%, rgba(254,106,164,1) 100.2% ); */
-/* background-image: linear-gradient( 109.1deg,  rgba(249,244,233,1) 3.4%, rgba(243,220,193,1) 23.5%, rgba(224,171,165,1) 45%, rgba(161,127,161,1) 65.3%, rgba(115,106,152,1) 87.2% ); */
-	/* background-image: linear-gradient( 109.6deg,  rgba(215,109,119,1) 11.3%, rgba(255,175,123,1) 100.2% ); */
-/* background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(226,240,254,1) 0%, rgba(255,247,228,1) 90% ); */
-/* background-image: linear-gradient( 179.7deg,  rgba(248,126,126,1) -0.5%, rgba(251,206,143,1) 35.3%, rgba(184,252,233,1) 67.2%, rgba(118,162,229,1) 92.3% ); */
-/* background-image: linear-gradient( 107.5deg,  rgba(208,222,170,1) 11.7%, rgba(191,226,224,1) 70.5% ); */
-
-
 		font-size: 4em;
 		display: flex;
 		flex-direction: column;
@@ -2224,7 +2211,6 @@ input, select, textarea {
 	}
 		.label {
 			font-size: .15em;
-			font-style: italic;
 			font-weight: 800px;
 			text-align: center;
 			text-overflow: wrap;
@@ -2234,6 +2220,14 @@ input, select, textarea {
 			align-self: center;
 			justify-self: center;
 			/* display: none; */
+		}
+
+		span.label {
+			font-size: .17em;
+			letter-spacing: .1em;
+			font-weight: 800;
+			font-style:  normal;
+		
 		}
 
 
@@ -2696,7 +2690,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease, -webkit-transform 0.2s ease;
 			-ms-transition: opacity 0.2s ease, -ms-transform 0.2s ease;
 			transition: opacity 0.2s ease, transform 0.2s ease;
-			background: #ffffff;
+			background:  #93A39B;
 			border-radius: 3em;
 			content: '';
 			height: 100%;
@@ -2796,6 +2790,7 @@ input, select, textarea {
 			button:hover:active,
 			.button:hover:active {
 				border-color: #ffffff !important;
+				
 			}
 
 				input[type="submit"]:hover:active:after,
@@ -2804,6 +2799,7 @@ input, select, textarea {
 				button:hover:active:after,
 				.button:hover:active:after {
 					opacity: 0.1;
+					
 				}
 
 /* Mini Posts */
@@ -3566,7 +3562,6 @@ input, select, textarea {
 		-webkit-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		-ms-transition: margin-left 0.5s ease, box-shadow 0.5s ease;
 		transition: margin-left 0.5s ease, box-shadow 0.5s ease;
-		background-color: #f5f6f7;
 		font-size: 0.9em;
 		position: relative;
 		width: 26em;
