--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3741,9 +3741,9 @@ input, select, textarea {
 						margin-left: -0.4375em;
 					}
 
-				body.is-preload #sidebar {
+				/* body.is-preload #sidebar {
 					display: none;
-				}
+				} */
 
 		}
 
@@ -3783,6 +3783,14 @@ input, select, textarea {
 					width: 5em;
 				}
 
+				#sidebar > .inner {
+					width: 100%
+
+				}
+
+			nav #menu {
+				width: 100%;
+			}
 		}
 
 /* Header */
